zoom jumping fix

--- a/vis/stylesheets/modules/map/_header.scss
+++ b/vis/stylesheets/modules/map/_header.scss
@@ -25,6 +25,7 @@
     }
 
     .backlink {
+        margin-top: 5px;
         position: relative;
         z-index: 3; 
         font-size: 11px;
